# NvBot2

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README_NEW.md  README_OLD.md  SECURITY.md  demo_bot.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_bot.py
config/: Guia bot.txt  config.yaml  model_params.yaml  secrets.env.example  trading_pairs.yaml
data/raw/: .gitkeep
docker/: Dockerfile  docker-compose.yml
docs/: WEBSOCKET_AGGREGATOR.md
logs/: .gitkeep
scripts/: README.md  analyze_timeframes.py  demo_alerts_example.py  demo_intraday_signals.py  demo_price_targets.py  deploy.sh  download_crypto_data.py  download_data.py  download_massive_data.py  production_bot.py  setup.sh  setup_live_trading.py  test_notifications.py  test_websocket_system.py  train_production_models.py  validate_config.py  websocket_demo.py
scripts/archive/: download_massive.py  train_conservative.py  train_crypto_optimized.py  train_improved.py  train_models.py  train_optimized.py
src/: __init__.py  live_intraday_bot.py  main.py  main_advanced.py
src/data_sources/: __init__.py  binance_websocket_aggregator.py  data_aggregator.py
src/indicators/: __init__.py
src/live_trading/: __init__.py  portfolio_manager.py
src/ml_models/: __init__.py  ml_predictor.py  price_target_predictor.py
src/strategies/: __init__.py  base_strategy.py  intraday_trading_signals.py  momentum_detector.py  momentum_predictor_strategy.py  multi_timeframe_analyzer.py
src/utils/: config_manager.py  logger.py  notification_simple.py  notification_system.py
tests/: conftest.py
